--- a/.env.development
+++ b/.env.development
@@ -1,2 +1,3 @@
 VITE_TRAOPAY_API_URL=''
-VITE_PROXY_TARGET='https://admin-test.taropay.com/'
+# VITE_PROXY_TARGET='https://admin-test.taropay.com/'
+VITE_PROXY_TARGET='http://10.66.11.12:30003'
